# ghostfetch

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  ghostfetch.desktop  install.sh
.github/workflows/: ci.yml  nightly.yml  release.yml
docs/: architecture.md  external-tools.md  troubleshooting.md
release/arch/: PKGBUILD
release/deb/debian/: changelog  copyright
release/fedora/: ghostfetch.spec
release/popos/debian/: control  rules
src/: info.rs  logos.rs  main.rs  types.rs
src/info/: display.rs  hardware.rs  helpers.rs  host.rs  mod.rs  network.rs  software.rs
