[package]
name = "ghostfetch"
version = "0.1.2"
edition = "2024"
description = "A fast, minimal system fetch tool for Linux - inspired by neofetch"
license = "MIT"
repository = "https://github.com/ghostkellz/ghostfetch"
keywords = ["fetch", "system-info", "cli", "arch-linux"]
categories = ["command-line-utilities"]

[dependencies]
sysinfo = { version = "0.38", default-features = false, features = ["system", "disk"] }
colored = "3"
whoami = "2"
clap = { version = "4", features = ["derive"] }
libc = "0.2"

[profile.release]
lto = true
strip = true
codegen-units = 1
